새로운 객체로 다시 만들때

--- a/08. 객체/index.html
+++ b/08. 객체/index.html
@@ -18,6 +18,7 @@
       this.age = age;
     }
 
+    // 공유해야하는 메서드 정의
     Person.prototype.introduce = function() {
       console.log('안녕하세요? 저는 ' + this.nickname + '고, 나이는 ' + this.age + '살이에요.');
     };
