--- a/12. 전진 3d 스크롤/index.html
+++ b/12. 전진 3d 스크롤/index.html
@@ -45,18 +45,40 @@
           </div>
         </section>
       </div>
-      <!-- house end -->
-      <!-- <div>
-
-        캐릭터 놓는 곳
-
+      <!-- // house -->
+      <!-- <div class="character">
+        <div class="character-face-con character-head">
+          <div class="character-face character-head-face face-front"></div>
+          <div class="character-face character-head-face face-back"></div>
+        </div>
+        <div class="character-face-con character-torso">
+          <div class="character-face character-torso-face face-front"></div>
+          <div class="character-face character-torso-face face-back"></div>
+        </div>
+        <div class="character-face-con character-arm character-arm-right">
+          <div class="character-face character-arm-face face-front"></div>
+          <div class="character-face character-arm-face face-back"></div>
+        </div>
+        <div class="character-face-con character-arm character-arm-left">
+          <div class="character-face character-arm-face face-front"></div>
+          <div class="character-face character-arm-face face-back"></div>
+        </div>
+        <div class="character-face-con character-leg character-leg-right">
+          <div class="character-face character-leg-face face-front"></div>
+          <div class="character-face character-arm-face face-back"></div>
+        </div>
+        <div class="character-face-con character-leg character-leg-left">
+          <div class="character-face character-leg-face face-front"></div>
+          <div class="character-face character-arm-face face-back"></div>
+        </div>
       </div> -->
 
     </div>
-    <!-- stage end -->
+    <!-- // stage -->
   </div>
   <!-- world end -->
 
+  <script src="js/character.js"></script>
   <script src="js/main.js"></script>
   <script src="js/wall3d.js"></script>
 </body>
